--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -274,7 +274,6 @@ body::-webkit-scrollbar-thumb {
 /* Small screens */
 @media only screen and (max-width: 600px) {
     .navbar {
-        position: sticky;
         bottom: 0;
         width: 100vw;
         height: 5rem;
@@ -294,6 +293,10 @@ body::-webkit-scrollbar-thumb {
 
     .photo {
         width: 100%;
+    }
+
+    .bg-bottom {
+        padding: 0 0 4.9rem;
     }
 
 
