--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -251,9 +251,17 @@ body::-webkit-scrollbar-thumb {
     font-family: 'Spectral', serif;
 }
 
+.para {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 .section-2 {
     width: 75%;
-    padding: 2rem 0;
+    padding: 3rem 0;
 }
 
 /* **************************************************************************************************** */
@@ -325,4 +333,5 @@ body::-webkit-scrollbar-thumb {
     .navbar:hover .logo-text {
         left: 0px;
     }
+
 }
