completed index page
must complete other pages and link in index.html

--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -1,25 +1,31 @@
 * {
-    font-family: 'Montserrat', 'Raleway', sans-serif;
-    font-size: 1rem;
     margin: 0px;
     border: 0px;
+    padding: 0;
+    font-family: 'Montserrat', 'Open Sans', sans-serif;
+    font-size: 14px;
+    text-align: justify;
     text-decoration: none;
     color: white;
     list-style: none;
-    padding: 0;
     box-sizing: border-box;
 }
 
 
 h1 {
     font-size: xx-large;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: xx-large;
     font-weight: 400;
 }
 
 p {
-    font-weight: 250;
-    font-size: small;
-    text-align: justify;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
+    padding: 0.5rem 2rem;
 }
 
 .bg {
@@ -50,6 +56,32 @@ p {
 
 .colour-5 {
     background-color: #f05454;
+}
+
+.bold {
+    font-weight: 750;
+    font-size: xx-large;
+}
+
+.regular {
+    font-weight: 400;
+}
+
+.thin {
+    font-weight: 200;
+}
+
+.dark {
+    color: #141418;
+}
+
+.light {
+    color: white;
+}
+
+.bright {
+    color: #f05454;
+    z-index: 3;
 }
 
 .container {
@@ -88,7 +120,8 @@ p {
 .alg-center {
     align-items: center;
 }
-.no-clk{
+
+.no-clk {
     cursor: default;
 }
 
@@ -229,25 +262,7 @@ body::-webkit-scrollbar-thumb {
     -webkit-filter: blur(2px);
 }
 
-.bold {
-    font-weight: 600;
-}
 
-.regular{
-    font-weight: 400;
-}
-
-.thin {
-    font-weight: 200;
-}
-
-.dark {
-    color: #141418;
-}
-
-.light {
-    color: white;
-}
 
 
 /* ########################################################################################### */
@@ -320,13 +335,13 @@ body::-webkit-scrollbar-thumb {
         width: 100%;
     }
 
-    .section-1{
+    .section-1 {
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-evenly;
     }
 
-    .photo{
+    .photo {
         text-align: center;
     }
 
